--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Alura Store | Descargue nuestros aplicactivos y juegos</title>
-  <link href="./assets/css/style.css" rel="stylesheet">
+  <title>mini Store | Descargue nuestros aplicactivos y juegos</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/destacados.css">
 </head>
 
 <body class="app">
@@ -14,7 +15,51 @@
     encabezado
   </header>
   <main class="contenido">
-    contenido
+    <section class="destaques">
+      <div class="destaques__principal box">
+        <h3 class="destaques__titulo destaques__secundario--tittle">Fornite</h3>
+      </div>
+      <div class="destaques__secundario box">
+        <h3 class="destaques__titulo">PUBG</h3>
+      </div>
+      <div class="destaques__secundario box">
+        <h3 class="destaques__titulo">Slack</h3>
+      </div>
+      <div class="destaques__secundario box">
+        <h3 class="destaques__titulo">Whatsapp</h3>
+      </div>
+      <div class="destaques__secundario box">
+        <h3 class="destaques__titulo">CS: GO</h3>
+      </div>
+      <div class="destaques__categorias">
+        <ul class="destaques__categorias___lista">
+          <li class="destaques__categorias___item">
+            <a class="destaques__categorias___link" href="#">
+              <i class="destaques__categorias___icon fab fa-buromobelexperte"></i>
+              Aplicaciones populares
+            </a>
+          </li>
+          <li class="destaques__categorias___item">
+            <a class="destaques__categorias___link" href="#">
+              <i class="fas fa-list-ol"></i>
+              Juegos populares
+            </a>
+          </li>
+          <li class="destaques__categorias___item">
+            <a class="destaques__categorias___link" href="#">
+              <i class="far fa-star"></i>
+              En Destaque
+            </a>
+          </li>
+          <li class="destaques__categorias___item">
+            <a class="destaques__categorias___link" href="#">
+              <i class="far fa-bell"></i>
+              Novedades
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="rodapie">
     footer
