Se agrega el menu del header, el footer con sus estilos.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 
 <body class="app">
   <header class="encabezado">
-    encabezado
+    <nav class="menu">
+      <ul class="menu__lista">
+        <li class="menu__item">
+          <a class="menu__link activo" href="#">
+            <i class="fas fa-home"></i>
+            Inicio
+          </a>
+          <a class="menu__link" href="#">
+            <i class="fas fa-mobile-alt"></i>
+            Aplicaciones
+          </a>
+          <a class="menu__link" href="#">
+            <i class="fas fa-gamepad"></i>
+            Juegos
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="contenido">
     <section class="destaques">
@@ -384,7 +401,7 @@
       </div>
     </section>
   </main>
-  <footer class="rodapie">
+  <footer class="footer">
     Todos los derechos reservados &copy 2022
   </footer>
 
