Se agrega responsive design a la section de populares.

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     </section>
   </main>
   <footer class="footer">
-    Todos los derechos reservados &copy 2022
+    Todos los derechos reservados &copy Juan Sebastian 2022
   </footer>
 
   <script src="./assets/js/fontawesome.all.min.js"></script>
